Enhance SEO and social media presence with meta tags and structured data in index.html

--- a/index.html
+++ b/index.html
@@ -2,9 +2,83 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Movieflix</title>
+
+    <title>Movieflix - Explore Movie Details & Ratings</title>
+
+    <!-- SEO Meta Description -->
+    <meta
+      name="description"
+      content="Discover detailed movie information, ratings, reviews, and trailers on Movieflix. Stay updated with the latest films and TV shows."
+    />
+
+    <!-- Keywords -->
+    <meta
+      name="keywords"
+      content="movie details, film ratings, movie reviews, upcoming movies, TV shows, trailers, Movieflix"
+    />
+
+    <!-- Author -->
+    <meta name="author" content="Movieflix Team" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://thenewmovieflix.vercel.app" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/logo.png" />
+
+    <!-- Open Graph Meta Tags (Facebook, LinkedIn, etc.) -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Movieflix - Explore Movie Details & Ratings"
+    />
+    <meta
+      property="og:description"
+      content="Get detailed movie info, ratings, reviews, and trailers on Movieflix."
+    />
+    <meta
+      property="og:image"
+      content="https://thenewmovieflix.vercel.app/hero.png"
+    />
+    <meta property="og:url" content="https://thenewmovieflix.vercel.app" />
+    <meta property="og:site_name" content="Movieflix" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Movieflix - Explore Movie Details & Ratings"
+    />
+    <meta
+      name="twitter:description"
+      content="Find detailed movie information, ratings, and reviews on Movieflix."
+    />
+    <meta
+      name="twitter:image"
+      content="https://thenewmovieflix.vercel.app/hero.png"
+    />
+    <meta name="twitter:site" content="@movieflix" />
+
+    <!-- Robots Meta Tag -->
+    <meta name="robots" content="index, follow" />
+
+    <!-- Structured Data (Schema.org for better search rankings) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Movie",
+        "name": "Movieflix",
+        "url": "https://thenewmovieflix.vercel.app",
+        "image": "https://thenewmovieflix.vercel.app/hero.png",
+        "description": "Discover detailed movie information, ratings, reviews, and trailers on Movieflix.",
+        "publisher": {
+          "@type": "Organization",
+          "name": "Movieflix",
+          "logo": "https://thenewmovieflix.vercel.app/logo.png"
+        }
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
