--- a/index.html
+++ b/index.html
@@ -2,32 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="preload" as="image" href="/hero.png" type="image/png" />
+    <link rel="preload" as="image" href="/hero-bg.png" type="image/png" />
+    <link rel="preload" as="image" href="/no-movie.png" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <title>Movieflix - Explore Movie Details & Ratings</title>
-
     <!-- SEO Meta Description -->
     <meta
       name="description"
       content="Discover detailed movie information, ratings, reviews, and trailers on Movieflix. Stay updated with the latest films and TV shows."
     />
-
     <!-- Keywords -->
     <meta
       name="keywords"
       content="movie details, film ratings, movie reviews, upcoming movies, TV shows, trailers, Movieflix"
     />
-
-    <!-- Author -->
-    <meta name="author" content="Movieflix Team" />
-
-    <!-- Canonical URL -->
+    <meta name="author" content="Movieflix Team(Alfred Favour)" />
     <link rel="canonical" href="https://thenewmovieflix.vercel.app" />
-
-    <!-- Favicon -->
     <link rel="icon" type="image/png" href="/logo.png" />
-
-    <!-- Open Graph Meta Tags (Facebook, LinkedIn, etc.) -->
     <meta property="og:type" content="website" />
     <meta
       property="og:title"
@@ -43,8 +35,6 @@
     />
     <meta property="og:url" content="https://thenewmovieflix.vercel.app" />
     <meta property="og:site_name" content="Movieflix" />
-
-    <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
@@ -59,11 +49,7 @@
       content="https://thenewmovieflix.vercel.app/hero.png"
     />
     <meta name="twitter:site" content="@movieflix" />
-
-    <!-- Robots Meta Tag -->
     <meta name="robots" content="index, follow" />
-
-    <!-- Structured Data (Schema.org for better search rankings) -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
